--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-cssmin": "^0.10.0",
     "grunt-contrib-compass": "^1.0.1",
-    "grunt-styleguide": "^0.2.17"
+    "grunt-styleguide": "^0.2.17",
+    "grunt-autoprefixer": "^1.0.1"
   },
   "dependencies": {
     "grunt-sync": "^0.2.0"
