--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
-  "name": "boilerplate",
-  "version": "0.0.0",
-  "description": "A simple front-end boilerplate.",
+  "name": "grunt-template",
+  "version": "0.0.1",
+  "description": "A simple front-end template.",
   "main": "Gruntfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Refugee/boilerplate.git"
+    "url": "https://github.com/Refugee/template.git"
   },
   "keywords": [
     "grunt",
-    "boilerplate"
+    "template"
   ],
   "author": "Rafael Birkmann",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Refugee/boilerplate/issues"
+    "url": "https://github.com/Refugee/template/issues"
   },
-  "homepage": "https://github.com/Refugee/boilerplate",
+  "homepage": "https://github.com/Refugee/template",
   "devDependencies": {
     "grunt": "^0.4.5",
     "assemble": "^0.4.42",
