--- a/package.json
+++ b/package.json
@@ -24,17 +24,18 @@
     "grunt": "^0.4.5",
     "assemble": "^0.4.42",
     "connect-livereload": "^0.5.0",
+    "grunt-newer": "^0.7.0",
+    "grunt-styleguide": "^0.2.17",
+    "grunt-autoprefixer": "^1.0.1",
+    "grunt-includes": "^0.4.5",
     "grunt-contrib-uglify": "^0.6.0",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-sass": "^0.8.1",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-contrib-connect": "^0.8.0",
-    "grunt-newer": "^0.7.0",
     "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-cssmin": "^0.10.0",
-    "grunt-contrib-compass": "^1.0.1",
-    "grunt-styleguide": "^0.2.17",
-    "grunt-autoprefixer": "^1.0.1"
+    "grunt-contrib-compass": "^1.0.1"
   },
   "dependencies": {
     "grunt-sync": "^0.2.0"
